a1/brendan_gordon/TEST_PROGRAMS/invalidtype/ethan_macdonald/string_if.min
var s: string;

s = "Hello World";

#Error: String cannot be used as if expression
if s then
	s = "Goodbye World";
endif
